Fixed multiple errors

--- a/cards/cards.html
+++ b/cards/cards.html
@@ -26,7 +26,7 @@
                 <p><a href="../transfer/transfer.html" class="noline">Transferencias</a></p>
                 <p class="active"  style="color: #00085A;"> <strong> Tarjetas</strong> </p>
                 <p><a href="../payments/payments.html" class="noline">Realizar pagos</a></p>
-                <p>Cerrar Sesión</p>
+                <p class="logOut" id="logout">Cerrar Sesión</p>
             </div>
             
 
@@ -70,6 +70,8 @@
         </div>
         
     </div>
+
+    <script src="../logout.js"></script>
     <script src="cards.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
