--- a/inicio/inicio.html
+++ b/inicio/inicio.html
@@ -23,7 +23,7 @@
                 <p><a href="../transfer/transfer.html" class="noline" id="transferLink">Transferencias</a></p>
                 <p><a href="../cards/cards.html" class="noline" id="cardsLink">Tarjetas</a></p>
                 <p><a href="../payments/payments.html" class="noline" id="paymentsLink">Realizar pagos</a></p>
-                <!-- <p>Cerrar Sesión</p> -->
+                <p class="logOut" id="logout">Cerrar Sesión</p>
             </div>
         </div>
 
@@ -87,6 +87,7 @@
     </div>
 
      <script src="inicio.js"></script>
+     <script src="../logout.js"></script>
      <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
