--- a/movements/movements.html
+++ b/movements/movements.html
@@ -18,18 +18,17 @@
 
     <div class="header">
         <div class="container-header"></div>
-
-        <img src="../pm2.png" alt="pm" class="img-pm">
-
-        <div class="menu"> 
-            
-            <p > <a href="../inicio/inicio.html" class="noline">Inicio</a> </p>
-            <p class="active"  style="color: #00085A;"> <strong> Movimientos</strong> </p>
-            <p><a href="../transfer/transfer.html" class="noline">Transferencias</a></p>
-            <p><a href="../cards/cards.html" class="noline">Tarjetas</a></p>
-            <p><a href="../payments/payments.html" class="noline">Realizar pagos</a></p>
-            <p class="logOut" id="logout">Cerrar Sesión</p>
+            <img src="../pm2.png" alt="pm" class="img-pm">
+            <div class="menu"> 
+                <p > <a href="../inicio/inicio.html" class="noline">Inicio</a> </p>
+                <p class="active"  style="color: #00085A;"> <strong> Movimientos</strong> </p>
+                <p><a href="../transfer/transfer.html" class="noline">Transferencias</a></p>
+                <p><a href="../cards/cards.html" class="noline">Tarjetas</a></p>
+                <p><a href="../payments/payments.html" class="noline">Realizar pagos</a></p>
+                <p><a href="/logout.html" class="logOut" id="logout">Cerrar Sesión</a></p>
+            </div>
         </div>
+
     </div>
 
     <div class="filter-rectangle">
@@ -82,7 +81,6 @@
     </table>
     </div>
 
-    <script src="../logout.js"></script>
     <script src="movements.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
