--- a/transfer/transfer.html
+++ b/transfer/transfer.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Transferir</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
         <link rel="stylesheet" href="transfer.css">
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -27,7 +29,7 @@
                 <p class="active"  style="color: #00085A;"> <strong>Transferencias</strong> </p>
                 <p><a href="../cards/cards.html" class="noline">Tarjetas</a></p>
                 <p><a href="../payments/payments.html" class="noline">Realizar pagos</a></p>
-                <p class="logOut" id="logout">Cerrar Sesión</p>
+                <p><a href="/logout.html" class="logOut" id="logout">Cerrar Sesión</a></p>
             </div>
             
 
@@ -78,7 +80,6 @@
         
 
     </div>
-    <script src="../logout.js"></script>
     <script src="transfer.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
