--- a/cards/cards.html
+++ b/cards/cards.html
@@ -4,8 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Tarjetas</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
         <link rel="stylesheet" href="cards.css">
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -27,7 +26,7 @@
                 <p><a href="../transfer/transfer.html" class="noline">Transferencias</a></p>
                 <p class="active"  style="color: #00085A;"> <strong> Tarjetas</strong> </p>
                 <p><a href="../payments/payments.html" class="noline">Realizar pagos</a></p>
-                <p><a href="/logout.html" class="logOut" id="logout">Cerrar Sesión</a></p>
+                <p class="logOut" id="logout">Cerrar Sesión</p>
             </div>
             
 
@@ -72,6 +71,7 @@
         
     </div>
 
+    <script src="../logout.js"></script>
     <script src="cards.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
