Updated web page

--- a/login/login.html
+++ b/login/login.html
@@ -18,10 +18,11 @@
             <div class="inputs"> 
                 <input type="text" id="email" placeholder="Correo electrónico  " class="borde">
                 <input type="password" id="password" placeholder="Contraseña" class="borde">
-                <div class="checkbox">
+                <!--  <div class="checkbox">
                     <input type="checkbox" id="remember" class="cbox"> 
                     <label class="label_box"  for="remember">Recordar contraseña</label>
                 </div>
+                -->
             </div> 
 
             <div class="buttons"> 
