Updated web page

--- a/login/login.html
+++ b/login/login.html
@@ -18,11 +18,10 @@
             <div class="inputs"> 
                 <input type="text" id="email" placeholder="Correo electrónico  " class="borde">
                 <input type="password" id="password" placeholder="Contraseña" class="borde">
-                <!--  <div class="checkbox">
+                <div class="checkbox">
                     <input type="checkbox" id="remember" class="cbox"> 
-                    <label class="label_box"  for="remember">Recordar contraseña</label>
+                    <label class="label_box"  for="remember">Recordar usuario</label>
                 </div>
-                -->
             </div> 
 
             <div class="buttons"> 
